Revise speaker bios and update topics list styling
Updated speaker bios for clarity and detail, adjusted font size for topics list.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                      Maximum 6 pages in LNCS format. Work-in-progress submissions are welcome. Authors are encouraged to include descriptions of prototype implementations. Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems.
                   </p>
                   <p><b>Topics of Interest include, but are not limited to:</b></p>
-                  <ul style="font-size:1.1em; text-align:left; list-style-type:none">
+                  <ul style="font-size:2.0em; text-align:left; list-style-type:none">
                      <li><span class="icon_plus list-icon"></span>Music composition and generation</li>
                      <li><span class="icon_plus list-icon"></span>Foundational music models</li>
                      <li><span class="icon_plus list-icon"></span>Music production workflows</li>
@@ -149,7 +149,8 @@
                   </div>
                   <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
                      <h3>Dr. Ethan Manilow / <span>Google DeepMind</span></h3>
-                     <p><b>Bio</b> Ethan is currently a Senior Research Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Computer Science working under Bryan Pardo in the Interactive Audio Lab at Northwestern University. During his PhD, he spent two years as a Student Researcher with Magenta and prior to that, he spent a year and half as Student Researcher at MERL on the Speech and Audio Team. His research centers on making machine learning systems that listen to and understand musical audio in an effort to make tools that can better assist artists. </p>
+                     <p><b>Bio</b> Ethan is currently a Senior Research Scientist at Google DeepMind on the Magenta Team. He finished his PhD in Computer Science working under Bryan Pardo in the Interactive Audio Lab at Northwestern University. During his PhD, he spent two years as a Student Researcher with Magenta and prior to that, he spent a year and half as Student Researcher at MERL on the Speech and Audio Team. His research centers on making machine learning systems that listen to and understand musical audio in an effort to make tools that can better assist artists.  
+					 </p>
                   </div>
                </div>
             </div>
@@ -161,7 +162,7 @@
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
 					<h3>Dr. Elio Quinton / <span>Universal Music Group</span></h3>
 					<p>
-					   <b>Bio</b> Elio is VP of Artificial Intelligence at Universal Music Group and founder of the Music & Audio Machine Learning Lab (MAML), the first ML R&D group in the recorded music industry. With a PhD in ML and Audio DSP from Queen Mary University of London, Elio has extensive experience in AI, audio technology, and supporting global artists with next-generation tools.
+					   <b>Bio</b> Elio is a scientist, engineer and leader with over a decade of experience in Artificial Intelligence, Machine Learning, and Audio Technology. Currently VP of Artificial Intelligence at Universal Music Group (UMG) and advisor to creative AI startups, he founded and leads the Music & Audio Machine Learning Lab (MAML), the first ever Machine Learning R\&D group in the recorded music industry. MAML's mission is to invent and build next-generation AI/ML tools to support and empower artists and industry professionals globally. Trained as both a scientist, engineer and musician, Elio holds a PhD in ML and Audio DSP from the Center for Digital Music, a Physics MSc, a Music Technology MA, and a diploma in Commercial Music performance from BIMM London.
 					</p>
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
@@ -190,7 +191,7 @@
 				 <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
 					<h3>Prof. Dorien Herremans / <span>Singapore University of Technology and Design</span></h3>
 					<p>
-					   <b>Bio</b> Dorien is an Associate Professor at SUTD, where she leads the Audio, Music, and AI (AMAAI) Lab. Previously a Marie Sklodowska-Curie Postdoctoral Fellow at Queen Mary University of London, she was named on the Singapore 100 Women in Tech list in 2021 and was a finalist for the SAIL Award (Super AI Leader) in 2024.
+					   <b>Bio</b> Dorien is an Associate Professor at Singapore University of Technology and Design (SUTD), where she leads the Audio, Music, and AI (AMAAI) Lab. Before joining SUTD, she was a Marie Sklodowska-Curie Postdoctoral Fellow at the Centre for Digital Music at Queen Mary University of London. She was also nominated on the Singapore 100 Women in Tech list in 2021, and one of the top 30 SAIL Award (Super AI Leader) Finalists in 2024 at the World AI Conference.
 					</p>
 				 </div>
 			  </div>
@@ -203,7 +204,8 @@
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
 					<h3>Dr. Hanoi Hantrakul / <span>ex-Google, ByteDance, TikTok</span></h3>
 					<p>
-					   <b>Bio</b> Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. He co-invented Google’s open-source DDSP library and the SEED-MUSIC model deployed in Doubao (China’s ChatGPT). As a sound artist ("yaboihanoi"), his music integrates Thai tunings and rhythms. He won the 2022 AI Song Contest and has performed internationally, with his instrument "Fidular" exhibited in the Musical Instruments Museum in Phoenix, AZ.
+					   <b>Bio</b> Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. His work explores how machine learning can empower music, arts and culture, particularly from Southeast Asia. With over 8 years of experience in the tech industry, he has developed state-of-the-art Generative AI models at Google, TikTok and ByteDance as a Senior AI Research Scientist. He is co-inventor of notable technologies including Google's open source DDSP library and the music large language model SEED-MUSIC deployed in Doubao (China's ChatGPT).
+					   As a sound artist performing under "yaboihanoi," his electronic music incorporates Thai tunings and rhythms. He won the 2022 international AI Song Contest with "Enter Demons and Gods" and has performed at SONAR Music Festival alongside artists like Skrillex and Four Tet. His musical instrument "Fidular" received an A' Silver Award and Core77 Design Award in 2017 and is permanently exhibited at the Musical Instruments Museum in Phoenix, AZ. His work on machine learning and cultural empowerment has been covered by international media including Deutschlandfunk, Scientific American and Fast Company.
 					</p>
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
@@ -213,27 +215,6 @@
 					   <div class="img-container-line line-2"></div>
 					   <div class="img-container-line line-3"></div>
 					</div>
-				 </div>
-			  </div>
-		   </div>
-		</div>
-		<!-- Speaker: Dr. Oriol Nieto -->
-		<div class="block-2-container section-container about-block-2-container">
-		   <div class="container">
-			  <div class="row">
-				 <div class="col-sm-4 block-2-box block-2-left block-2-media wow fadeInLeft">
-					<div class="block-2-img-container">
-					   <img src="assets/img/about/oriol.png" alt="Dr. Oriol Nieto">
-					   <div class="img-container-line line-1"></div>
-					   <div class="img-container-line line-2"></div>
-					   <div class="img-container-line line-3"></div>
-					</div>
-				 </div>
-				 <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
-					<h3>Dr. Oriol Nieto / <span>Adobe Research</span></h3>
-					<p>
-					   <b>Bio</b> Oriol is a Senior Audio Research Engineer in the Sound Design AI Group at Adobe Research. He earned his PhD in Music Data Science from NYU’s Music and Audio Research Lab. His work spans music information retrieval, recommendation systems, and deep learning for audio, and he is also an active musician (guitar, violin, and vocals).
-					</p>
 				 </div>
 			  </div>
 		   </div>
@@ -261,7 +242,7 @@
                   </div>
                   <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
                      <h3>Keshav Bhandari / <span>Queen Mary University of London</span></h3>
-                     <p>Keshav is a PhD candidate at the Centre for Digital Music (C4DM), researching neuro-symbolic methods for music composition with a focus on structure and controllability. He is the main contact for EAIM at AAAI-26.</p>
+                     <p>Keshav is a PhD candidate at the Centre for Digital Music (C4DM) at Queen Mary University of London supervised by Prof. Simon Colton. His research explores neuro-symbolic methods for music composition with a focus on musical structure and controllability. Prior to Queen Mary, he was part of the Interactive Audio Lab at Northwestern University, Evanston. Over the years, Keshav has published papers across conferences such as NeurIPS, AAAI, IJCNN and recently won the best paper award at EvoMUSART-25 (part of EvoStar). Keshav will be the main contact for the proposed AI music workshop at AAAI-26.</p>
                   </div>
                </div>
             </div>
@@ -273,7 +254,7 @@
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
 					<h3>Dr. Abhinaba Roy / <span>Singapore University of Technology and Design</span></h3>
 					<p>
-					   Abhinaba is a Senior Research Fellow at SUTD. He received his PhD in Computer Vision from the Istituto Italiano di Tecnologia in Genoa, Italy. His recent research focuses on AI and music, including text-to-music generation, symbolic music creation, and multimodal music understanding. His work has appeared at ISMIR, IJCNN, AAAI, and other leading venues.
+					   Abhinaba is a senior research fellow at Singapore University of Technology and Design. He received his Ph.D. in Computer Vision in 2019 from the Istituto Italiano di Tecnologia, Genoa, Italy. He has held positions in both industry and academia, focusing on developing and deploying practical AI solutions. In recent years, his research has increasingly focused on the intersection of AI and music, particularly in areas such as text-to-music generation, symbolic music creation, and multimodal music understanding. His work has been published in leading conferences including ISMIR, IJCNN, AAAI, and others.
 					</p>
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
@@ -302,7 +283,7 @@
 				 <div class="col-sm-8 block-2-box block-2-right wow fadeInUp">
 					<h3>Prof. Simon Colton / <span>Queen Mary University of London</span></h3>
 					<p>
-					   Simon is a Professor of Computational Creativity, AI, and Games at Queen Mary University of London. He has published around 200 papers and led major EPSRC and EU projects. His research explores how to engineer systems capable of taking on creative responsibilities in generative music, arts, and science. He is also active in public engagement and the philosophy of computational creativity.
+					   Simon is a Professor of Computational Creativity, AI and Games in EECS at Queen Mary University of London. He was previously an EPSRC leadership fellow at Imperial College and Goldsmiths College, and held an ERA Chair at Falmouth University. He is an AI researcher with around 200 publications whose work has won national and international awards, and has led numerous EPSRC and EU-funded projects. He focuses specifically on questions of Computational Creativity, where researchers study how to engineer systems to take on creative responsibilities in generative music, arts and science projects. Prof. Colton has has written about the philosophy of Computational Creativity and led numerous public engagement projects.
 					</p>
 				 </div>
 			  </div>
@@ -315,7 +296,7 @@
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
 					<h3>Prof. Dorien Herremans / <span>Singapore University of Technology and Design</span></h3>
 					<p>
-					   Dorien is an Associate Professor at SUTD, where she leads the Audio, Music, and AI (AMAAI) Lab. She was previously a Marie Sklodowska-Curie Postdoctoral Fellow at Queen Mary University of London. Dorien was named to the Singapore 100 Women in Tech list (2021) and was a finalist for the 2024 SAIL Award (Super AI Leader) at the World AI Conference.
+					   Dorien is an Associate Professor at Singapore University of Technology and Design (SUTD), where she leads the Audio, Music, and AI (AMAAI) Lab. Before joining SUTD, she was a Marie Sklodowska-Curie Postdoctoral Fellow at the Centre for Digital Music at Queen Mary University of London. She was also nominated on the Singapore 100 Women in Tech list in 2021, and one of the top 30 SAIL Award (Super AI Leader) Finalists in 2024 at the World AI Conference.
 					</p>
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
