--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
                      <b>Submission Requirements</b><br/>
-                     Maximum 6 pages in LNCS format. Work-in-progress submissions are welcome. Authors are encouraged to include descriptions of prototype implementations. Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems.
+                     Work-in-progress submissions are welcome. Authors are encouraged to include descriptions of prototype implementations. Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems.
                   </p>
                   <p><b>Topics of Interest include, but are not limited to:</b></p>
-                  <ul style="font-size:2.0em; text-align:left; list-style-type:none">
+                  <ul style="font-size:1.8em; text-align:left; list-style-type:none">
                      <li><span class="icon_plus list-icon"></span>Music composition and generation</li>
                      <li><span class="icon_plus list-icon"></span>Foundational music models</li>
                      <li><span class="icon_plus list-icon"></span>Music production workflows</li>
@@ -110,6 +110,9 @@
                      <li><span class="icon_plus list-icon"></span>Ethical, cultural and societal implications</li>
                      <li><span class="icon_plus list-icon"></span>Accessibility and inclusion in music AI</li>
                   </ul>
+				  <p>
+					 Maximum pages and paper format: TBD
+				  </p>
                   <p>
                      <b>Important Dates</b><br/>
                      Paper submission deadline: 29 October 2025<br/>
