Revise workshop title and enhance description
Updated the title and header for the workshop to reflect it as the 1st International Workshop. Enhanced the workshop description for clarity and detail, emphasizing human-AI collaboration in music.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Workshop on Emerging AI Technologies for Music</title>
+      <title>1st Workshop on Emerging AI Technologies for Music</title>
       <!-- CSS -->
       <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,400">
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
       <!-- Page title -->
       <div class="page-title top-content">
          <div class="page-title-text wow fadeInUp">
-            <h1>International Workshop on Emerging AI Technologies for Music</h1>
+            <h1>1st International Workshop on Emerging AI Technologies for Music</h1>
             <p><b>Held in conjunction with AAAI-26</b></p>
             <p>26–27 January 2026, Singapore</p>
             <div class="page-title-bottom-link">
@@ -69,10 +69,16 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12 block-2-left section-description wow fadeIn">
-                  <h2>Workshop Description</h2>
+                  <!-- New centered H1 with logo -->
+				  <h1 style="text-align:center; margin-bottom:20px;">
+				   <img src="assets/img/eaim.jpeg" alt="EAIM Workshop Logo" 
+						style="max-width:220px; width:100%; height:auto; display:block; margin:0 auto 15px;">
+				   1st International Workshop on Emerging AI Technologies for Music
+				  </h1>
+				  <h2>Workshop Description</h2>
                   <div class="divider-1 wow fadeInUp block-2-box "><span></span></div>
                   <p>
-                     This full-day workshop explores the frontier of AI technologies for music, focusing on AI not just as automation but as a collaborator in creative expression. We emphasize keeping humans actively in the loop through prompt-based interfaces, multimodal workflows, interpretable systems, and meaningful user-controls. The workshop highlights controllability, collaboration, and human-centered approaches to music AI, aiming to amplify rather than replace human creativity.
+                     This full day workshop, part of a new annual series on the latest developments in AI for music will explore the emerging frontier of AI technologies that serve not just as automation tools but as collaborators in creative expression. As AI systems reshape how music is composed, performed, and produced, this workshop will highlight the importance of keeping humans actively in the loop through prompt-based interfaces, multimodal workflows and other interactive AI tools. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to guide, steer, and shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. While early music AI focused on fully autonomous models, the field is increasingly shifting toward co-creative and controllable systems, reflecting growing recognition that meaningful musical outcomes arise through human-machine collaboration. As the inaugural workshop in this planned annual series, we will explore how AI systems can be designed to amplify rather than replace human creativity.
                   </p>
                </div>
             </div>
@@ -90,7 +96,7 @@
                      Work-in-progress submissions are welcome. Authors are encouraged to include descriptions of prototype implementations. Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems.
                   </p>
                   <p><b>Topics of Interest include, but are not limited to:</b></p>
-                  <ul style="font-size:1.8em; text-align:left; list-style-type:none">
+                  <ul style="font-size:1.5em; text-align:left; list-style-type:none">
                      <li><span class="icon_plus list-icon"></span>Music composition and generation</li>
                      <li><span class="icon_plus list-icon"></span>Foundational music models</li>
                      <li><span class="icon_plus list-icon"></span>Music production workflows</li>
