Change headings and margin styles in index.html
Updated headings from h2 to h3 for consistency and adjusted margins for better layout.

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
             <div class="row">
                <div class="col-sm-12 block-2-left section-description wow fadeIn">
                   <!-- New centered H1 with logo -->
-				  <h1 style="text-align:center; margin-bottom:20px;">
+				  <h1 style="text-align:center; margin-bottom:40px;">
 				   <img src="assets/img/eaim.jpeg" alt="EAIM Workshop Logo" 
-						style="max-width:220px; width:100%; height:auto; display:block; margin:0 auto 15px;">
+						style="max-width:220px; width:100%; height:auto; display:block; margin:0 auto 20px;">
 				   1st International Workshop on Emerging AI Technologies for Music
 				  </h1>
-				  <h2>Workshop Description</h2>
+				  <br></br>
+				  <h3>Workshop Description</h3>
                   <div class="divider-1 wow fadeInUp block-2-box "><span></span></div>
                   <p>
                      This full day workshop, part of a new annual series on the latest developments in AI for music will explore the emerging frontier of AI technologies that serve not just as automation tools but as collaborators in creative expression. As AI systems reshape how music is composed, performed, and produced, this workshop will highlight the importance of keeping humans actively in the loop through prompt-based interfaces, multimodal workflows and other interactive AI tools. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to guide, steer, and shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. While early music AI focused on fully autonomous models, the field is increasingly shifting toward co-creative and controllable systems, reflecting growing recognition that meaningful musical outcomes arise through human-machine collaboration. As the inaugural workshop in this planned annual series, we will explore how AI systems can be designed to amplify rather than replace human creativity.
@@ -89,7 +90,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12 pricing-2 section-description wow fadeIn">
-                  <h2>Call for Papers</h2>
+                  <h3>Call for Papers</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
                      <b>Submission Requirements</b><br/>
@@ -121,9 +122,9 @@
 				  </p>
                   <p>
                      <b>Important Dates</b><br/>
-                     Paper submission deadline: 29 October 2025<br/>
-                     Acceptance/Rejection notice: 14 November 2025<br/>
-                     Camera-ready deadline: 30 November 2025<br/>
+                     Paper Submission Deadline: 29 October 2025<br/>
+                     Acceptance/Rejection Notice: 14 November 2025<br/>
+                     Camera-Ready Deadline: 30 November 2025<br/>
                      Workshop Date: 26–27 January 2026
                   </p>
                   <p>
@@ -139,7 +140,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12 about section-description wow fadeIn">
-                  <h2>Speakers</h2>
+                  <h3>Speakers</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                </div>
             </div>
@@ -213,7 +214,7 @@
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
 					<h3>Dr. Hanoi Hantrakul / <span>ex-Google, ByteDance, TikTok</span></h3>
 					<p>
-					   <b>Bio</b> Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. His work explores how machine learning can empower music, arts and culture, particularly from Southeast Asia. With over 8 years of experience in the tech industry, he has developed state-of-the-art Generative AI models at Google, TikTok and ByteDance as a Senior AI Research Scientist. He is co-inventor of notable technologies including Google's open source DDSP library and the music large language model SEED-MUSIC deployed in Doubao (China's ChatGPT).
+					   <b>Bio</b> Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. His work explores how machine learning can empower music, arts and culture, particularly from Southeast Asia. With over 8 years of experience in the tech industry, he has developed state-of-the-art Generative AI models at Google, TikTok and ByteDance as a Senior AI Research Scientist. He is co-inventor of notable technologies including Google's open source DDSP library and the music LLM SEED-MUSIC deployed in Doubao (China's ChatGPT).
 					   As a sound artist performing under "yaboihanoi," his electronic music incorporates Thai tunings and rhythms. He won the 2022 international AI Song Contest with "Enter Demons and Gods" and has performed at SONAR Music Festival alongside artists like Skrillex and Four Tet. His musical instrument "Fidular" received an A' Silver Award and Core77 Design Award in 2017 and is permanently exhibited at the Musical Instruments Museum in Phoenix, AZ. His work on machine learning and cultural empowerment has been covered by international media including Deutschlandfunk, Scientific American and Fast Company.
 					</p>
 				 </div>
@@ -235,7 +236,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12 about section-description wow fadeIn">
-                  <h2>Organizers</h2>
+                  <h3>Organizers</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                </div>
             </div>
@@ -326,7 +327,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12 block-2 section-description wow fadeIn">
-                  <h2>Contact Us</h2>
+                  <h3>Contact Us</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>You can contact the organizers at: k [dot] bhandari [at] qmul.ac.uk</p>
                </div>
