--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				  </h1>
 				  <br></br>
 				  <h3>Workshop Description</h3>
-                  <div class="divider-1 wow fadeInUp block-2-box "><span></span></div>
+                  <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
                      This full day workshop, part of a new annual series on the latest developments in AI for music will explore the emerging frontier of AI technologies that serve not just as automation tools but as collaborators in creative expression. As AI systems reshape how music is composed, performed, and produced, this workshop will highlight the importance of keeping humans actively in the loop through prompt-based interfaces, multimodal workflows and other interactive AI tools. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to guide, steer, and shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. While early music AI focused on fully autonomous models, the field is increasingly shifting toward co-creative and controllable systems, reflecting growing recognition that meaningful musical outcomes arise through human-machine collaboration. As the inaugural workshop in this planned annual series, we will explore how AI systems can be designed to amplify rather than replace human creativity.
                   </p>
