Add Programme Committee section to index.html
Added a Programme Committee section with members and roles.

--- a/index.html
+++ b/index.html
@@ -322,6 +322,31 @@
 		</div>
          <!-- Add other organizers as before -->
       </div>
+	  <!-- Programme Committee -->
+		<div class="about-container section-container" id="committee">
+		   <div class="container">
+			  <div class="row">
+				 <div class="col-sm-12 about section-description wow fadeIn">
+					<h2>Programme Committee</h2>
+					<div class="divider-1 wow fadeInUp"><span></span></div>
+					<p style="text-align:left; font-size:1.1em; line-height:1.6;">
+					   Prof. Dorien Herremans, Singapore University of Technology and Design (editor/reviewer) <br/>
+					   Keshav Bhandari, PhD candidate, Queen Mary University of London (editor/reviewer) <br/>
+					   Dr. Abhinaba Roy, Singapore University of Technology and Design (editor/reviewer) <br/>
+					   Prof. Simon Colton, Queen Mary University of London (editor/reviewer) <br/>
+					   Prof. Mathieu Barthet, Queen Mary University of London (editor/reviewer) <br/>
+					   Dr. Jaeyong Kang, Singapore University of Technology and Design (reviewer) <br/>
+					   Dr. Berker Banar, Ellison Institute of Technology Oxford (reviewer) <br/>
+					   Benjamin Hayes, Sony CSL, Paris (reviewer) <br/>
+					   Shuoyang Zheng, PhD candidate, Queen Mary University of London (reviewer) <br/>
+					   MA Yinghao, PhD candidate, Queen Mary University of London (reviewer) <br/>
+					   Zixun Guo, PhD candidate, Queen Mary University of London (reviewer) <br/>
+					   Jordie Shier, PhD candidate, Queen Mary University of London (reviewer) <br/>
+					</p>
+				 </div>
+			  </div>
+		   </div>
+		</div>
       <!-- Contact -->
       <div class="block-2-container section-container contact-container" id="contact">
          <div class="container">
