--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>1st Workshop on Emerging AI Technologies for Music</title>
       <!-- CSS -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700,300,400">
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,400">
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
       <link rel="stylesheet" href="assets/elegant-font/code/style.css">
@@ -122,9 +122,9 @@
 				  </p>
                   <p>
                      <b>Important Dates</b><br/>
-                     Paper Submission Deadline: 29 October 2025<br/>
-                     Acceptance/Rejection Notice: 14 November 2025<br/>
-                     Camera-Ready Deadline: 30 November 2025<br/>
+                     Paper Submission Deadline: 04 November 2025<br/>
+                     Acceptance/Rejection Notice: 17 November 2025<br/>
+                     Camera-Ready Deadline: 28 November 2025<br/>
                      Workshop Date: 26–27 January 2026
                   </p>
                   <p>
