changed my second pic

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right block-2-media wow fadeInUp">
 					<div class="block-2-img-container">
-					   <img src="assets/img/about/dorien.png" alt="Prof. Dorien Herremans">
+					   <img src="assets/img/about/dorienh.jpg" alt="Prof. Dorien Herremans">
 					   <div class="img-container-line line-1"></div>
 					   <div class="img-container-line line-2"></div>
 					   <div class="img-container-line line-3"></div>
