--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
             </div>
          </div>
       </div>
+
+
       <!-- Call for Papers -->
-      <div class="pricing-2-container section-container" id="cfp">
+       <div class="cfp-container section-container">
          <div class="container">
             <div class="row">
-               <div class="col-sm-12 pricing-2 section-description wow fadeIn">
+               <div class="col-sm-12 cfp section-description wow fadeIn">
                   <h3>Call for Papers</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
@@ -132,7 +134,7 @@
                      Proceedings will be arranged with a publisher (to be announced later).
                   </p>
                </div>
-            </div>
+             </div>
          </div>
       </div>
       <!-- Speakers -->
@@ -231,6 +233,8 @@
 		</div>
          <!-- Add more speakers as before -->
       </div>
+
+
       <!-- Organizers -->
       <div class="about-container section-container" id="about">
          <div class="container">
