update cfp text

--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
                      <b>Submission Requirements</b><br/>
-                     Work-in-progress submissions are welcome. Authors are encouraged to include descriptions of prototype implementations. Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems.
+                     We welcome submissions of original research, creative systems, and critical perspectives on emerging AI technologies for music. 
+                     Contributions may include theoretical work, empirical studies, system designs, evaluations, or artistic explorations. 
+                     While implemented systems and demonstrations are encouraged, strong conceptual and analytical contributions without a prototype are also welcome. 
+                     We particularly value submissions that emphasize controllability, interpretability, explainability, personalization, human-AI interaction, and collaboration in music systems.
+
+                     <!-- Conceptual designs without evidence of implementation are discouraged. We particularly welcome submissions that emphasize controllability, interpretability, explainability, personalization, human–AI interaction, and collaboration in music systems. -->
                   </p>
                   <p><b>Topics of Interest include, but are not limited to:</b></p>
                   <ul style="font-size:1.5em; text-align:left; list-style-type:none">
