Revise important dates and add submission instructions
Updated important dates and submission instructions.

--- a/index.html
+++ b/index.html
@@ -123,21 +123,23 @@
                      <li><span class="icon_plus list-icon"></span>Music theory and musicology</li>
                      <li><span class="icon_plus list-icon"></span>Ethical, cultural and societal implications</li>
                      <li><span class="icon_plus list-icon"></span>Accessibility and inclusion in music AI</li>
-                  </ul>
-				  <p>
-					 Maximum pages and paper format: TBD
-				  </p>
+                  </ul>				
                   <p>
                      <b>Important Dates</b><br/>
-                     Paper Submission Deadline: 04 November 2025<br/>
-                     Acceptance/Rejection Notice: 26 November 2025<br/>
+                     Paper Submission Deadline: 24 October 2025<br/>
+                     Acceptance/Rejection Notice: 14 November 2025<br/>
                      Camera-Ready Deadline: 14 December 2025<br/>
                      Workshop Date: 26–27 January 2026
                   </p>
                   <p>
                      <b>Publishing Venue</b><br/>
-                     Proceedings will be arranged with a publisher (to be announced later).
+                     Proceedings will be published in Proceedings of Machine Learning Research (PMLR) as a volume.
                   </p>
+				  <p>
+					 <b>Submission Instructions</b><br/>
+					 Maximum pages and paper format: TBD
+					 Submission Portal: https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM
+				  </p>
                </div>
              </div>
          </div>
