Update workshop description and submission instructions

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				  <h3>Workshop Description</h3>
                   <div class="divider-1 wow fadeInUp"><span></span></div>
                   <p>
-                     This full day workshop, part of a new annual series on the latest developments in AI for music will explore the emerging frontier of AI technologies that serve not just as automation tools but as collaborators in creative expression. As AI systems reshape how music is composed, performed, and produced, this workshop will highlight the importance of keeping humans actively in the loop through prompt-based interfaces, multimodal workflows and other interactive AI tools. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to guide, steer, and shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. While early music AI focused on fully autonomous models, the field is increasingly shifting toward co-creative and controllable systems, reflecting growing recognition that meaningful musical outcomes arise through human-machine collaboration. As the inaugural workshop in this planned annual series, we will explore how AI systems can be designed to amplify rather than replace human creativity.
+                     This full day workshop, part of a new annual series on the latest developments in AI for music, explores how AI can become a true creative collaborator rather than just another automation tool. As AI transforms music composition, performance, and production, we're seeing an exciting shift from fully autonomous systems toward human-centered approaches. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. As the field is increasingly shifting toward co-creative and controllable systems, we’ll dive into cutting-edge research and discuss how meaningful musical outcomes can arise through human-machine collaboration. Join us for this inaugural workshop as we explore how to design AI that enhances rather than overshadows human musical creativity.
                   </p>
                </div>
             </div>
@@ -133,12 +133,19 @@
                   </p>
                   <p>
                      <b>Publishing Venue</b><br/>
-                     Proceedings will be published in Proceedings of Machine Learning Research (PMLR) as a volume.
+                     Proceedings will be published as a volume in Proceedings of Machine Learning Research (PMLR).
                   </p>
 				  <p>
-					 <b>Submission Instructions</b><br/>
-					 Maximum pages and paper format: TBD
-					 Submission Portal: https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM
+				   <b>Submission Instructions</b><br/>
+				   Paper format: Maximum of 8 pages (excluding references). Please follow the PMLR format using this template: 
+				   <a href="EAIM_template.zip" download style="font-weight:bold; color:#0b5cff;">
+					  Download Template (ZIP)
+				   </a>
+				   <br/><br/>
+				   Submission Portal: 
+				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold; color:#0b5cff;">
+					  OpenReview – EAIM Workshop
+				   </a>
 				  </p>
                </div>
              </div>
