Add Dr. Jan Melechovsky to the list of contributors

--- a/index.html
+++ b/index.html
@@ -354,12 +354,13 @@
 					   Prof. Simon Colton, Queen Mary University of London <br/>
 					   Prof. Mathieu Barthet, Queen Mary University of London <br/>
 					   Dr. Jaeyong Kang, Singapore University of Technology and Design <br/>
+					   Dr. Jan Melechovsky, Singapore University of Technology and Design <br/>
 					   Dr. Berker Banar, Ellison Institute of Technology Oxford <br/>
 					   Benjamin Hayes, Sony CSL, Paris <br/>
 					   Shuoyang Zheng, PhD candidate, Queen Mary University of London <br/>
 					   MA Yinghao, PhD candidate, Queen Mary University of London <br/>
 					   Zixun Guo, PhD candidate, Queen Mary University of London <br/>
-					   Jordie Shier, PhD candidate, Queen Mary University of London <br/>
+					   Jordie Shier, PhD candidate, Queen Mary University of London <br/>			
 					   <br/><br/>
 					</p>
 				 </div>
