Update submission instructions link to Overleaf template

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 				  <p>
 				   <b>Submission Instructions</b><br/>
 				   Paper format: Maximum of 8 pages (excluding references). Please follow the PMLR format using this template: 
-				   <a href="EAIM_template.zip" download style="font-weight:bold; color:#0b5cff;">
-					  Download Template (ZIP)
-				   </a>
+				    <a href="https://www.overleaf.com/latex/templates/eaim-template/bvqzcsngcxwz" target="_blank" style="font-weight:bold; color:#0b5cff;">
+					   EAIM Template on Overleaf
+					</a>
 				   <br/><br/>
 				   Submission Portal: 
 				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold; color:#0b5cff;">
