--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
 					  OpenReview – EAIM Workshop
 				   </a>
 				  </p>
+				  <p>
+				   <b>Submission Policies</b><br/>
+				   Authors must ensure that all submissions are original and have not been published elsewhere or concurrently submitted to another venue. 
+				   Plagiarism in any form, including self-plagiarism, will result in desk rejection. <br/><br/>
+				   If generative AI tools are used to produce substantial portions of the writing, analysis, or figures, their use must be clearly disclosed in the paper’s acknowledgments or methodology section. Authors remain fully responsible for the correctness, originality, and integrity of their submissions. <br/><br/>
+				   At least one author of each accepted paper must register and present the work at the workshop. 
+				</p>
                </div>
              </div>
          </div>
