Add note on OpenReview email requirements

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
 				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold; color:#0b5cff;">
 					  OpenReview – EAIM Workshop
 				   </a>
+				   <br/>
+				   <span style="color:red; font-weight:bold;">
+					  Note: To sign up for OpenReview, you must use a university or institution email address. 
+					  If you are not affiliated with any institution, account creation with a personal email may take up to 2 weeks so please plan accordingly. 
+				   </span>
 				  </p>
 				  <p>
 				   <b>Submission Policies</b><br/>
