--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                      <li><span class="icon_plus list-icon"></span>Music theory and musicology</li>
                      <li><span class="icon_plus list-icon"></span>Ethical, cultural and societal implications</li>
                      <li><span class="icon_plus list-icon"></span>Accessibility and inclusion in music AI</li>
-                  </ul>				
+                  </ul>
+					<script src="https://cdn.logwork.com/widget/countdown.js"></script>
+					<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-style="circles" data-timezone="Asia/Singapore" data-textcolor="#fc0303" data-date="2025-10-24 23:00">Countdown Timer</a>
                   <p>
                      <b>Important Dates</b><br/>
                      Paper Submission Deadline: 24 October 2025<br/>
