--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       <![endif]-->
       <!-- Favicon -->
       <link rel="shortcut icon" href="assets/ico/favi.png">
+	   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W2W1BTQQ0R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W2W1BTQQ0R');
+</script>
    </head>
    <body>
       <!-- Loader -->
