--- a/index.html
+++ b/index.html
@@ -268,6 +268,27 @@
 			  </div>
 		   </div>
 		</div>
+		<!-- Speaker: Ziqian Ning -->
+		<div class="block-2-container section-container section-container-gray about-block-2-container">
+		   <div class="container">
+			  <div class="row">
+				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
+					<h3>Ziqian Ning / <span>ByteDance-Seed</span></h3>
+					<p>
+					   <b>Bio</b> Ziqian Ning is an AI Research Scientist at ByteDance-Seed, where he develops large-scale music generation models. His research focuses on generative AI for music and speech, with expertise spanning music generation, voice conversion, and text-to-speech synthesis. Prior to ByteDance, he worked at Microsoft Azure Speech and Netease Fuxi AI Lab, developing real-time voice conversion systems and expressive speech technologies. He holds a Master's degree from Northwestern Polytechnical University under Prof. Lei Xie. His work has been published at leading conferences including AAAI, ICASSP, and INTERSPEECH. Notable contributions include DiffRhythm, the first diffusion-based model for end-to-end full-length song generation, and the DualVC series for low-latency streaming voice conversion. His team achieved first place in the Singing Voice Conversion Challenge 2023, demonstrating human-level naturalness. He continues to explore how AI can transform music creation and empower artists.
+					</p>
+				 </div>
+				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
+					<div class="block-2-img-container">
+					   <img src="assets/img/about/Ziqian_Ning.jpeg" alt="Ziqian Ning">
+					   <div class="img-container-line line-1"></div>
+					   <div class="img-container-line line-2"></div>
+					   <div class="img-container-line line-3"></div>
+					</div>
+				 </div>
+			  </div>
+		   </div>
+		</div>
          <!-- Add more speakers as before -->
       </div>
 
