Update image source from .jpeg to .jpg

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
 					<div class="block-2-img-container">
-					   <img src="assets/img/about/Ziqian_Ning.jpeg" alt="Ziqian Ning">
+					   <img src="assets/img/about/Ziqian_Ning.jpg" alt="Ziqian Ning">
 					   <div class="img-container-line line-1"></div>
 					   <div class="img-container-line line-2"></div>
 					   <div class="img-container-line line-3"></div>
