--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 				 </div>
 			  </div>
 		   </div>
-         <!-- Add more speakers as before -->
-      </div>
+		</div>
+		<!-- End of Speakers Section -->
 
 
       <!-- Organizers -->
